# textencode

./: .clang-format  .gitignore  .gitmodules  Makefile.am  README.md  base.cpp  configure.ac
src/: Makefile.am  textencode.pc.in
src/textencode/: base_n.cpp  base_n.hpp  binary.cpp  binary.hpp  common.hpp  fd.cpp  fd.hpp  main.cpp  map.cpp  map.hpp  nix.cpp  nix.hpp
src/textencode/internal/: base_n.hpp  common.hpp  nix.hpp  utils.hpp
test/: Makefile.am  base_n.cpp  binary.cpp  common.hpp  nix.cpp
test/internal/: base_n.cpp  nix.cpp  utils.cpp
